@startuml NetworkAndMatchmakingServices
skinparam classAttributeIconSize 0
skinparam direction top to bottom
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #333333
  ArrowColor #333333
}

title Network, PvP & Matchmaking Services

' ===== Application Layer Interfaces =====
interface INetworkService <<Application>> {
  + OnMatchFound: event Action<string, string>
  + OnWaiting: event Action
  + OnMatchmakingRejected: event Action<string>
  + OnTurnResultReceived: event Action<PvPTurnResult>
  + LastTurnResult: PvPTurnResult?
  + Connect(): Task<bool>
  + FindMatch(username: string, party: List<Pokemon>): Task
  + SubmitMoveAsync(roomId: string, playerName: string, moveIndex: int, attackerPokemon: Pokemon): Task
  + CancelMatchmakingAsync(): Task
}

interface IPvPService <<Application>> {
  + CanAccessPvP(): bool
  + Connect(): bool
  + FindMatch()
  + CancelMatchmaking()
  + SubscribeTurnResult(handler: Action<PvPTurnResult>)
  + UnsubscribeTurnResult(handler: Action<PvPTurnResult>)
  + LastTurnResult: PvPTurnResult?
  + SubmitMove(roomId: string, moveIndex: int)
  + RecordMatchResult(winnerName: string): bool
  + OnMatchFound: event Action<string, string>
  + OnMatchmakingRejected: event Action<string>
}

class PvPService <<Application>> {
  - _gameSession: GameSession
  - _networkService: INetworkService
  - _authenService: IAuthenService
  + CanAccessPvP(): bool
  + Connect(): bool
  + FindMatch()
  + CancelMatchmaking()
  + SubscribeTurnResult(handler: Action<PvPTurnResult>)
  + UnsubscribeTurnResult(handler: Action<PvPTurnResult>)
  + LastTurnResult: PvPTurnResult?
  + SubmitMove(roomId: string, moveIndex: int)
  + RecordMatchResult(winnerName: string): bool
  + OnMatchFound: event Action<string, string>
  + OnMatchmakingRejected: event Action<string>
}

' ===== Infrastructure Layer =====
class NetworkService <<Infrastructure>> {
  - _connection: HubConnection
  + OnMatchFound: event Action<string, string>
  + OnWaiting: event Action
  + OnMatchmakingRejected: event Action<string>
  + OnTurnResultReceived: event Action<PvPTurnResult>
  + LastTurnResult: PvPTurnResult?
  + Connect(): Task<bool>
  + FindMatch(username: string, party: List<Pokemon>): Task
  + SubmitMoveAsync(roomId: string, playerName: string, moveIndex: int, attackerPokemon: Pokemon): Task
  + CancelMatchmakingAsync(): Task
}

' ===== Server Side (PokemonServer) =====
class BattleHub <<Server>> {
  - _matchmakingService: MatchmakingService
  - _pvpManager: PvPManager
  - _serviceProvider: IServiceProvider
  + FindMatch(username: string, party: List<Pokemon>)
  + SubmitMove(request: BattleActionRequest)
  + CancelMatchmaking()
  + OnDisconnectedAsync(exception: Exception?)
}

class MatchmakingService <<Server>> {
  - _waitingPlayers: ConcurrentDictionary<string, WaitingPlayer>
  - _activeRooms: ConcurrentDictionary<string, BattleRoom>
  - _pendingParties: ConcurrentDictionary<string, List<Pokemon>>
  + StoreParty(connectionId: string, party: List<Pokemon>)
  + GetParty(connectionId: string): List<Pokemon>
  + JoinQueue(connectionId: string, username: string): (BattleRoom?, bool)
  + LeaveQueue(connectionId: string)
  + GetRoom(roomId: string): BattleRoom?
}

class BattleRoom <<Server>> {
  + RoomId: string
  + Player1: WaitingPlayer
  + Player2: WaitingPlayer
  + IsActive: bool
}

class PvPManager <<Server>> {
  - _battleStates: ConcurrentDictionary<string, PvPBattleState>
  - _pendingMoves: ConcurrentDictionary<string, List<BattleActionRequest>>
  + InitializeBattle(roomId: string, player1: string, party1: List<Pokemon>, player2: string, party2: List<Pokemon>)
  + RegisterMove(request: BattleActionRequest, connectionId: string)
  + IsRoomReady(roomId: string): bool
  + ProcessTurn(roomId: string): PvPTurnResult
  + GetBattleState(roomId: string): PvPBattleState?
  + GetMissingPlayer(roomId: string): (string, string)?
}

class WaitingPlayer <<Server>> {
  + ConnectionId: string
  + Username: string
  + Party: List<Pokemon>
}

' ===== Shared DTOs (Pokemon.Shared) =====
class PvPTurnResult <<Shared>> {
  + IsGameOver: bool
  + WinnerName: string?
  + Player1Hp: int
  + Player2Hp: int
  + CombatLogs: List<string>
  + Player1Active: PvPMonState?
  + Player2Active: PvPMonState?
  + {static} Continue(p1Hp, p2Hp, logs, p1Active, p2Active): PvPTurnResult
  + {static} GameOver(winnerName, logs, p1Active, p2Active): PvPTurnResult
}

class PvPMonState <<Shared>> {
  + Name: string
  + CurrentHP: int
  + MaxHP: int
  + IsFainted: bool
  + Moves: List<PvPMoveState>
}

class PvPMoveState <<Shared>> {
  + Name: string
  + Type: string
  + Power: int
  + PP: int
}

class BattleActionRequest <<Shared>> {
  + RoomId: string
  + PlayerName: string
  + MoveIndex: int
  + AttackerPokemon: Pokemon
  + ConnectionId: string
}

' ===== Relationships =====
PvPService ..|> IPvPService
PvPService --> INetworkService
PvPService --> GameSession
PvPService --> IAuthenService

NetworkService ..|> INetworkService
NetworkService ..> BattleHub : SignalR

BattleHub --> MatchmakingService
BattleHub --> PvPManager
MatchmakingService --> BattleRoom
BattleRoom --> WaitingPlayer
PvPManager --> PvPTurnResult
PvPManager --> BattleActionRequest
PvPTurnResult --> PvPMonState
PvPMonState --> PvPMoveState

@enduml</content>
<parameter name="filePath">c:\C#\PokemonConsole\TurnBasedPokemon\Diagram\ClassDiagram\NetworkAndMatchmakingServices.puml